<resources>
    <string name="app_name">Beauty</string>
    <string name="beauty">Beauty</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="create_account">Create an account</string>
    <string name="register">Registration</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="account">Account</string>
    <string name="home">Home</string>
    <string name="setting">Setting</string>
    <string name="title_activity_load_photo_firebase">LoadPhotoFirebase</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="infoPost">Описание</string>
    <string name="push">Push</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>