<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/Logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/beauty"
        android:textSize="46sp"
        android:fontFamily="@font/raleway_thin"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        />


    <EditText
        android:id="@+id/Email_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:ems="10"
        android:fontFamily="@font/paytone_one"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/Grey"
        android:textSize="12sp" />

    <EditText
        android:id="@+id/Password_edit_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/Email_edit_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:fontFamily="@font/paytone_one"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/Grey"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/Forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/Grey"
        android:layout_below="@+id/Password_edit_text"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="ResetPassword"
        />


    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_below="@+id/Forgot"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:onClick="LogIn"
        />

    <TextView
        android:id="@+id/New_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_account"
        android:textColor="@color/Grey"
        android:layout_below="@+id/button"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:onClick="RegisterAccount"
        />


</RelativeLayout>